# Open-Trading

./: .gitignore  CMakeLists.txt  LICENSE  README  README.markdown  backtester.lua  server.lua
cmake/: FindLuabind.cmake
data/history/: EURUSD_MetaQuotes_2011-09-26_2011-10-28.csv  EURUSD_MetaQuotes_2011-10-03_2011-10-28.csv  EURUSD_MetaQuotes_2011-10-24_2011-10-28.csv  EURUSD_MetaQuotes_2011-10-27_2011-10-27.csv  EURUSD_MetaQuotes_2011-10-31_2011-11-04.csv  EURUSD_unknown_2010-09-01_2010-11-09.csv
data/params/: MaCross-backtest.lua  MaCross.lua
doc/: DEPENDENCIES  open-trading-logo.xcf  protocol-1.2.txt
mt5/: Client.cpp  Client.hpp  MetaTrader.cpp  MetaTrader.hpp  mt5history.mq5  mt5socket.mq5  mt5socket.sln  mt5socket.vcxproj  mt5socket.vcxproj.filters
src/backtester/: Backtester.cpp  Backtester.hpp  CMakeLists.txt  Conf.cpp  Conf.hpp  Feedback.cpp  Feedback.hpp  Logger.cpp  Logger.hpp  ParamsGenerator.cpp  ParamsGenerator.hpp  ParamsGeneratorBase.cpp  ParamsGeneratorBase.hpp  ParamsGeneratorComplete.cpp  ParamsGeneratorComplete.hpp  PlotGenerator.cpp  PlotGenerator.hpp  Report.cpp  Report.hpp  ReportManager.cpp  ReportManager.hpp  ResultRanking.cpp  ResultRanking.hpp  ResultRankingProfit.cpp  ResultRankingProfit.hpp  StratParamsMap.cpp  StratParamsMap.hpp  Task.cpp  Task.hpp  Thread.cpp  Thread.hpp  TickGenerator.cpp  TickGenerator.hpp  main.cpp
src/conf/: Conf.cpp  Conf.hpp
src/core/: Bar.cpp  Bar.hpp  Controller.cpp  Controller.hpp  Feedback.cpp  Feedback.hpp  History.cpp  History.hpp  StratParams.cpp  StratParams.hpp  StratParamsConf.cpp  StratParamsConf.hpp  StrategyInstantiator.cpp  StrategyInstantiator.hpp
src/core/actor/: Actor.cpp  Actor.hpp  DoNothing.cpp  DoNothing.hpp  TrailingStop.cpp  TrailingStop.hpp
src/core/indicator/: Indicator.cpp  Indicator.hpp  MovingAverage.cpp  MovingAverage.hpp
src/core/signal/: MaCross.cpp  MaCross.hpp  Signal.cpp  Signal.hpp
src/core/strategy/: MaCross.cpp  MaCross.hpp  Strategy.cpp  Strategy.hpp
src/hischeck/: CMakeLists.txt  Logger.cpp  Logger.hpp  main.cpp
src/logger/: Logger.cpp  Logger.hpp
src/lua/: LuaContext.cpp  LuaContext.hpp
src/packet/: Packet.cpp  Packet.hpp
src/server/: CMakeLists.txt  Cli.cpp  Cli.hpp  Feedback.cpp  Feedback.hpp  Gui.cpp  Gui.hpp  LogExporter.cpp  LogExporter.hpp  Logger.cpp  Logger.hpp  QSignalBlocker.cpp  QSignalBlocker.hpp  Server.cpp  Server.hpp  SoundManager.cpp  SoundManager.hpp  TradingManager.cpp  TradingManager.hpp  Ui.cpp  Ui.hpp  main.cpp
src/server/qt/: AlertsWindow.cpp  AlertsWindow.hpp  MainWindow.cpp  MainWindow.hpp  Network.cpp  Network.hpp
src/server/ui/: alerts.ui  main.ui
src/sound/: Sound.cpp  Sound.hpp  SoundSystem.cpp  SoundSystem.hpp
src/tools/: TimeToString.cpp  TimeToString.hpp  Timer.cpp  Timer.hpp  ToString.hpp
